# EspLink

./: .gitignore  ARCHITECTURE.md  README.md
cloud/: docker-compose.yml
cloud/api/: .env.example  requirements.txt
cloud/api/alembic/: env.py
cloud/api/alembic/versions/: 20260505_001_init.py
cloud/api/app/: config.py  database.py  main.py  redis_client.py
cloud/api/app/core/: deps.py  security.py
cloud/api/app/models/: __init__.py  device.py  ota.py  user.py
cloud/api/app/routers/: auth.py  device.py  ota.py  ws.py
cloud/api/app/schemas/: auth.py  device.py  ota.py
cloud/api/app/services/: ws_manager.py
docs/: ESP32开发环境搭建与编译烧录手册.md
esplink-app/: app.js  app.json  app.wxss  project.config.json
esplink-app/device-pages/default/: index.js  index.json  index.wxml  index.wxss
esplink-app/pages/device/: device.js  device.wxml  device.wxss
esplink-app/pages/index/: index.js  index.json  index.wxml  index.wxss
esplink-app/pages/provision/: provision.js  provision.json  provision.wxml  provision.wxss
esplink-app/pages/scan/: scan.js  scan.wxml  scan.wxss
esplink-app/pages/success/: success.js  success.json  success.wxml  success.wxss
esplink-app/utils/: api.js  ble.js  blufi.js  device-page-registry.js
esplink-firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
esplink-firmware/main/: CMakeLists.txt  app_blufi.c  app_blufi.h  app_button.c  app_button.h  app_device.c  app_device.h  app_nvs.c  app_nvs.h  app_ota.c  app_ota.h  app_wifi.c  app_wifi.h  app_ws.c  app_ws.h  board_config.h  idf_component.yml  main.c
